solved overlap with calc & overflow with add div

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 header{
   background-color: lightblue;
+  height: 3em;
 }
 html,body{
   height: 100%;
@@ -17,13 +18,18 @@ a{
     height: 100%;
     margin-bottom: -50px; /*footer's height*/
     background-color: lightgrey;
-}
+  }
 .Favorites{
+  height: calc(100% - 3em - 50px);
+  overflow: auto;
+}
+.FavoritesWrapper{
   display: grid;
   grid-template-columns: repeat(6,1fr);
+  margin-right: 17px;
+  margin-bottom: -50px; /*footer's height*/
 }
 .Favorite{
-  width: 1fr;
   height: 10em;
   margin: 10px;
   background-color: yellow;
@@ -33,4 +39,10 @@ footer,#push{
 }
 footer{
   background-color: rgb(200, 255, 200);
+}
+
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
